syntax = "proto3";

package posts;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "libraries/proto/posts";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (Post);
  
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty);
  
  rpc UpdatePost(UpdatePostRequest) returns (Post);
  
  rpc GetPost(GetPostRequest) returns (Post);
  
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message Post {
  string id = 1;
  string title = 2;
  string description = 3;
  string user_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_private = 7;
  Tags tags = 8;
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  string user_id = 3;
  bool is_private = 4;
  Tags tags = 5;
}

message DeletePostRequest {
  string id = 1;
  string requester_id = 2;
}

message Tags {
  repeated string values = 1;
}

message UpdatePostRequest {
  string id = 1;
  string requester_id = 2;
  optional string title = 3;
  optional string description = 4;
  optional bool is_private = 5;
  optional Tags tags = 6;
}

message GetPostRequest {
  string id = 1;
  string requester_id = 2;
}

message ListPostsRequest {
  int32 page_size = 1;
  int32 page_number = 2;
  string requester_id = 3;
  optional Tags tags = 4;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 total_count = 2;
}
